@@ -1,10 +1,16 @@
 2002-02-22  Alexander Dupuy  <dupuy@sysdetect.com>
 
+	* lib/b_addrgroup.c (do_net_init_af_inet_tcp_connect): remove dead code
+	(tcp_end): remove dead code
+
+	* lib/b_pollio.c (polling_io_ioh_handler): suppress Insure error
+
 	* include/libbk.h (BK_STRINGIFY): expand argument into string form
 
 	* include/libbk_oscompat.h (BK_FUNCNAME): portable use of __func__
 	(ntohll, htonll): cast everything to u_int64_t before 32 bit shifts
-
+	suppress Insure error
+	
 2002-02-20  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* include/libbk.h: declare bk_ioh_print{,f}
